--- a/src/vista/MenuPrincipal.form
+++ b/src/vista/MenuPrincipal.form
@@ -93,6 +93,14 @@
                     <Property name="text" type="java.lang.String" value="Pagos"/>
                   </Properties>
                   <SubComponents>
+                    <MenuItem class="javax.swing.JMenuItem" name="jMenuItemPagos">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="Pagos"/>
+                      </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemPagosActionPerformed"/>
+                      </Events>
+                    </MenuItem>
                     <MenuItem class="javax.swing.JMenuItem" name="jMenuItem6">
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Tipo de Pagos"/>
